crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__goto_error_120x40.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ c0    │ c1    c2    c3    c4    c5    c6    c7    c8    c9  → 8 more cols│ COLUMN                                 "
"    │ str   │ str   str   str   str   str   str   str   str   str   str    str │ c0 · str · col 1/20                    "
"  1 │ r0c0  │ r0c1  r0c2  r0c3  r0c4  r0c5  r0c6  r0c7  r0c8  r0c9  r0c10  r0c…│ sampling…                              "
"  2 │ r1c0  │ r1c1  r1c2  r1c3  r1c4  r1c5  r1c6  r1c7  r1c8  r1c9  r1c10  r1c…│                                        "
"  3 │ r2c0  │ r2c1  r2c2  r2c3  r2c4  r2c5  r2c6  r2c7  r2c8  r2c9  r2c10  r2c…│ TOP VALUES                             "
"  4 │ r3c0  │ r3c1  r3c2  r3c3  r3c4  r3c5  r3c6  r3c7  r3c8  r3c9  r3c10  r3c…│ sampling…                              "
"  5 │ r4c0  │ r4c1  r4c2  r4c3  r4c4  r4c5  r4c6  r4c7  r4c8  r4c9  r4c10  r4c…│                                        "
"  6 │ r5c0  │ r5c1  r5c2  r5c3  r5c4  r5c5  r5c6  r5c7  r5c8  r5c9  r5c10  r5c…│ RECORD                                 "
"  7 │ r6c0  │ r6c1  r6c2  r6c3  r6c4  r6c5  r6c6  r6c7  r6c8  r6c9  r6c10  r6c…│ c0            r0c0                     "
"  8 │ r7c0  │ r7c1  r7c2  r7c3  r7c4  r7c5  r7c6  r7c7  r7c8  r7c9  r7c10  r7c…│ c1            r0c1                     "
"  9 │ r8c0  │ r8c1  r8c2  r8c3  r8c4  r8c5  r8c6  r8c7  r8c8  r8c9  r8c10  r8c…│ c2            r0c2                     "
" 10 │ r9c0  │ r9c1  r9c2  r9c3  r9c4  r9c5  r9c6  r9c7  r9c8  r9c9  r9c10  r9c…│ c3            r0c3                     "
" 11 │ r10c0 │ r10c1 r10c2 r10c3 r10c4 r10c5 r10c6 r10c7 r10c8 r10c9 r10c10 r10…│ c4            r0c4                     "
" 12 │ r11c0 │ r11c1 r11c2 r11c3 r11c4 r11c5 r11c6 r11c7 r11c8 r11c9 r11c10 r11…│ c5            r0c5                     "
" 13 │ r12c0 │ r12c1 r12c2 r12c3 r12c4 r12c5 r12c6 r12c7 r12c8 r12c9 r12c10 r12…│ c6            r0c6                     "
" 14 │ r13c0 │ r13c1 r13c2 r13c3 r13┌ Go to ─────────────────────────────────────────┐          r0c7                     "
" 15 │ r14c0 │ r14c1 r14c2 r14c3 r14│                                                │          r0c8                     "
" 16 │ r15c0 │ r15c1 r15c2 r15c3 r15│ › zzz                                          │          r0c9                     "
" 17 │ r16c0 │ r16c1 r16c2 r16c3 r16│ no such column "zzz"                           │          r0c10                    "
" 18 │ r17c0 │ r17c1 r17c2 r17c3 r17│                                                │          r0c11                    "
" 19 │ r18c0 │ r18c1 r18c2 r18c3 r18│ Enter go · Esc cancel                          │          r0c12                    "
" 20 │ r19c0 │ r19c1 r19c2 r19c3 r19└────────────────────────────────────────────────┘          r0c13                    "
" 21 │ r20c0 │ r20c1 r20c2 r20c3 r20c4 r20c5 r20c6 r20c7 r20c8 r20c9 r20c10 r20…│ c14           r0c14                    "
" 22 │ r21c0 │ r21c1 r21c2 r21c3 r21c4 r21c5 r21c6 r21c7 r21c8 r21c9 r21c10 r21…│ c15           r0c15                    "
" 23 │ r22c0 │ r22c1 r22c2 r22c3 r22c4 r22c5 r22c6 r22c7 r22c8 r22c9 r22c10 r22…│ c16           r0c16                    "
" 24 │ r23c0 │ r23c1 r23c2 r23c3 r23c4 r23c5 r23c6 r23c7 r23c8 r23c9 r23c10 r23…│ c17           r0c17                    "
" 25 │ r24c0 │ r24c1 r24c2 r24c3 r24c4 r24c5 r24c6 r24c7 r24c8 r24c9 r24c10 r24…│ c18           r0c18                    "
" 26 │ r25c0 │ r25c1 r25c2 r25c3 r25c4 r25c5 r25c6 r25c7 r25c8 r25c9 r25c10 r25…│ c19           r0c19                    "
" 27 │ r26c0 │ r26c1 r26c2 r26c3 r26c4 r26c5 r26c6 r26c7 r26c8 r26c9 r26c10 r26…│                                        "
" 28 │ r27c0 │ r27c1 r27c2 r27c3 r27c4 r27c5 r27c6 r27c7 r27c8 r27c9 r27c10 r27…│                                        "
" 29 │ r28c0 │ r28c1 r28c2 r28c3 r28c4 r28c5 r28c6 r28c7 r28c8 r28c9 r28c10 r28…│                                        "
" 30 │ r29c0 │ r29c1 r29c2 r29c3 r29c4 r29c5 r29c6 r29c7 r29c8 r29c9 r29c10 r29…│                                        "
" 31 │ r30c0 │ r30c1 r30c2 r30c3 r30c4 r30c5 r30c6 r30c7 r30c8 r30c9 r30c10 r30…│                                        "
" 32 │ r31c0 │ r31c1 r31c2 r31c3 r31c4 r31c5 r31c6 r31c7 r31c8 r31c9 r31c10 r31…│                                        "
" 33 │ r32c0 │ r32c1 r32c2 r32c3 r32c4 r32c5 r32c6 r32c7 r32c8 r32c9 r32c10 r32…│                                        "
" 34 │ r33c0 │ r33c1 r33c2 r33c3 r33c4 r33c5 r33c6 r33c7 r33c8 r33c9 r33c10 r33…│                                        "
" 35 │ r34c0 │ r34c1 r34c2 r34c3 r34c4 r34c5 r34c6 r34c7 r34c8 r34c9 r34c10 r34…│                                        "
" t.csv · 12.6 KB · 100 rows · delim ,  quote none  utf-8  header · mmap · index ready             R 1 / 100  C 1/20  0% "
" Enter go  Esc cancel                                                                                            ? help "
