crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__inspector_focused.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: inspector_text(&terminal)
---
 COLUMN
 id · bool · col 1/2
 nulls     0.0%
 distinct  ~1
 max width 1

 TOP VALUES · sample 1 rows
 1              ████████████████      1

 RECORD
 id            1
 text          xxxxxxxxxxxxxxxxxxxxxxx…
