crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__value_popup.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ id   │ text                                                              │ COLUMN                                 "
"    │ bool │ str                                                               │ id · bool · col 1/2                    "
"  1 │ 1    │ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx…                          │ nulls     0.0%                         "
"                                                                               │ distinct  ~1                           "
"          ┌ text ────────────────────────────────────────────────────────────────────────────────────────────┐          "
"          │ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │          "
"          │ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │          "
"          │ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │██      1 "
"          │ xxxxxxxxxxxx                                                                                     │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │xxxxxxxx… "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │ j/k scroll · Esc close                                                                           │          "
"          └──────────────────────────────────────────────────────────────────────────────────────────────────┘          "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 311 B · 1 rows · delim ,  quote none  utf-8  header · mmap · index ready                    R 1 / 1  C 1/2  0% "
" jk scroll  G end  Esc close                                                                                     ? help "
